--- a/credentials.sample
+++ b/credentials.sample
@@ -1,3 +1,9 @@
 project_id: 0000000a-0aaa-000a-a0a0-a0a0000aaa00
 watsonx.ai_url: https://us-south.ml.cloud.ibm.com
 apikey_value:0000_00000-M-0000000000-00000000000000000000
+
+llm_model: ibm/granite-3-8b-instruct
+embedding_model: sentence-transformers/all-MiniLM-L6-v2
+max_new_tokens: 5000
+temperature: 0.5
+
