--- a/environment.yml
+++ b/environment.yml
@@ -11,6 +11,7 @@ dependencies:
   - aiohappyeyeballs=2.6.1=pyhd8ed1ab_0
   - aiohttp=3.13.0=pyh2a7be5b_0
   - aiosignal=1.4.0=pyhd8ed1ab_0
+  - alsa-lib=1.2.14=hb9d3cd8_0
   - annotated-types=0.7.0=pyhd8ed1ab_1
   - anyio=4.11.0=pyhcf101f3_0
   - asgiref=3.10.0=pyhd8ed1ab_0
@@ -37,11 +38,14 @@ dependencies:
   - backoff=2.2.1=pyhd8ed1ab_1
   - bcrypt=5.0.0=py312h868fb18_0
   - blinker=1.9.0=pyhff2d567_0
+  - brotli=1.1.0=hb03c661_4
+  - brotli-bin=1.1.0=hb03c661_4
   - brotli-python=1.1.0=py312h1289d80_4
   - bzip2=1.0.8=hda65f42_8
   - c-ares=1.34.5=hb9d3cd8_0
   - ca-certificates=2025.10.5=hbd8a1cb_0
   - cachetools=6.2.1=pyhd8ed1ab_0
+  - cairo=1.18.4=h3394656_0
   - certifi=2025.10.5=pyhd8ed1ab_0
   - cffi=2.0.0=py312h35888ee_0
   - charset-normalizer=3.4.4=pyhd8ed1ab_0
@@ -49,14 +53,19 @@ dependencies:
   - click=8.3.0=pyh707e725_0
   - colorama=0.4.6=pyhd8ed1ab_1
   - coloredlogs=15.0.1=pyhd8ed1ab_4
+  - contourpy=1.3.3=py312hd9148b4_2
   - cpython=3.12.12=py312hd8ed1ab_0
   - cryptography=46.0.3=py312hee9fe19_0
+  - cycler=0.12.1=pyhd8ed1ab_1
+  - cyrus-sasl=2.1.28=hd9c7081_0
   - dataclasses-json=0.6.7=pyhd8ed1ab_1
   - datasets=2.14.4=pyhd8ed1ab_0
+  - dbus=1.16.2=h3c4dab8_0
   - deprecated=1.2.18=pyhd8ed1ab_0
   - dill=0.3.7=pyhd8ed1ab_0
   - distro=1.9.0=pyhd8ed1ab_1
   - dnspython=2.8.0=pyhcf101f3_0
+  - double-conversion=3.3.1=h5888daf_0
   - durationpy=0.10=pyhd8ed1ab_0
   - email-validator=2.3.0=pyhd8ed1ab_0
   - email_validator=2.3.0=hd8ed1ab_0
@@ -66,6 +75,15 @@ dependencies:
   - filelock=3.20.0=pyhd8ed1ab_0
   - flask=3.1.2=pyhd8ed1ab_0
   - flask-cors=6.0.1=pyhe01879c_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=h77eed37_3
+  - fontconfig=2.15.0=h7e30c49_1
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - fonttools=4.60.1=py312h8a5da7c_0
+  - freetype=2.14.1=ha770c72_0
   - frozenlist=1.7.0=pyhf298e5d_0
   - fsspec=2025.9.0=pyhd8ed1ab_0
   - gflags=2.2.2=h5888daf_1005
@@ -74,10 +92,12 @@ dependencies:
   - gmpy2=2.2.1=py312hcaba1f9_1
   - google-auth=2.41.1=pyhd8ed1ab_0
   - googleapis-common-protos=1.70.0=pyhd8ed1ab_0
+  - graphite2=1.3.14=hecca717_2
   - greenlet=3.2.4=py312h1289d80_1
   - grpcio=1.67.1=py312hacea422_2
   - h11=0.16.0=pyhd8ed1ab_0
   - h2=4.3.0=pyhcf101f3_0
+  - harfbuzz=12.1.0=h15599e2_0
   - hf-xet=1.1.10=py310h77a0e7f_2
   - hpack=4.1.0=pyhd8ed1ab_0
   - httpcore=1.0.9=pyh29332c3_0
@@ -87,6 +107,7 @@ dependencies:
   - huggingface_hub=0.35.3=pyhd8ed1ab_0
   - humanfriendly=10.0=pyh707e725_8
   - hyperframe=6.1.0=pyhd8ed1ab_0
+  - icu=75.1=he02047a_0
   - idna=3.11=pyhd8ed1ab_0
   - importlib-metadata=8.7.0=pyhe01879c_1
   - importlib-resources=6.5.2=pyhd8ed1ab_0
@@ -99,6 +120,7 @@ dependencies:
   - jsonschema=4.25.1=pyhe01879c_0
   - jsonschema-specifications=2025.9.1=pyhcf101f3_0
   - keyutils=1.6.3=hb9d3cd8_0
+  - kiwisolver=1.4.9=py312h0a2e395_1
   - krb5=1.21.3=h659f571_0
   - langchain=0.3.17=pymin312_hff2d567_0
   - langchain-chroma=0.2.6=pyhd8ed1ab_0
@@ -120,10 +142,15 @@ dependencies:
   - libbrotlidec=1.1.0=hb03c661_4
   - libbrotlienc=1.1.0=hb03c661_4
   - libcblas=3.9.0=37_h0358290_openblas
+  - libclang-cpp21.1=21.1.0=default_h99862b1_1
+  - libclang13=21.1.0=default_h746c552_1
   - libcrc32c=1.1.2=h9c3ff4c_0
+  - libcups=2.3.3=hb8b1518_5
   - libcurl=8.14.1=h332b0f4_0
   - libdeflate=1.24=h86f0d12_0
+  - libdrm=2.4.125=hb03c661_1
   - libedit=3.1.20250104=pl5321h7949ede_0
+  - libegl=1.7.0=ha4b6fd6_2
   - libev=4.33=hd590300_2
   - libevent=2.1.12=hf998b51_1
   - libexpat=2.7.1=hecca717_0
@@ -134,6 +161,10 @@ dependencies:
   - libgcc-ng=15.2.0=h69a702a_7
   - libgfortran=15.2.0=h69a702a_7
   - libgfortran5=15.2.0=hcd61629_7
+  - libgl=1.7.0=ha4b6fd6_2
+  - libglib=2.86.0=h1fed272_0
+  - libglvnd=1.7.0=ha4b6fd6_2
+  - libglx=1.7.0=ha4b6fd6_2
   - libgomp=15.2.0=h767d61c_7
   - libgoogle-cloud=2.35.0=h2b5623c_0
   - libgoogle-cloud-storage=2.35.0=h0121fbd_0
@@ -141,15 +172,20 @@ dependencies:
   - libiconv=1.18=h3b78370_2
   - libjpeg-turbo=3.1.0=hb9d3cd8_0
   - liblapack=3.9.0=37_h47877c9_openblas
+  - libllvm21=21.1.0=hecd9e04_0
   - liblzma=5.8.1=hb9d3cd8_2
   - libmpdec=4.0.0=hb9d3cd8_0
   - libnghttp2=1.67.0=had1ee68_0
   - libnsl=2.0.1=hb9d3cd8_1
+  - libntlm=1.8=hb9d3cd8_0
   - libopenblas=0.3.30=pthreads_h94d23a6_2
+  - libopengl=1.7.0=ha4b6fd6_2
   - libopentelemetry-cpp=1.18.0=hfcad708_1
   - libopentelemetry-cpp-headers=1.18.0=ha770c72_1
   - libparquet=19.0.0=h081d1f1_9_cpu
+  - libpciaccess=0.18=hb9d3cd8_0
   - libpng=1.6.50=h421ea60_1
+  - libpq=17.6=h3675c94_2
   - libprotobuf=5.28.3=h6128344_1
   - libpulsar=3.7.0=hcde9337_0
   - libre2-11=2024.07.02=hbbce691_2
@@ -166,29 +202,35 @@ dependencies:
   - libwebp-base=1.6.0=hd42ef1d_0
   - libxcb=1.17.0=h8a09558_0
   - libxcrypt=4.4.36=hd590300_1
-  - libxml2=2.13.8=h2cb61b6_1
+  - libxkbcommon=1.11.0=he8b52b9_0
+  - libxml2=2.13.8=h04c0eec_1
+  - libxslt=1.1.43=h7a3aeb2_0
   - libzlib=1.3.1=hb9d3cd8_2
   - lz4-c=1.10.0=h5888daf_1
   - markdown-it-py=4.0.0=pyhd8ed1ab_0
   - markupsafe=3.0.3=pyh7db6752_0
   - marshmallow=3.26.1=pyhd8ed1ab_0
+  - matplotlib=3.10.7=py312h7900ff3_0
+  - matplotlib-base=3.10.7=py312he3d6523_0
   - mdurl=0.1.2=pyhd8ed1ab_1
   - mmh3=5.2.0=py312h1289d80_1
   - monotonic=1.6=pyhd8ed1ab_0
   - mpc=1.3.1=h24ddda3_1
   - mpfr=4.2.1=h90cbb55_3
+  - mplcursors=0.7=pyhd8ed1ab_0
   - mpmath=1.3.0=pyhd8ed1ab_1
   - multidict=6.6.3=pyh62beb40_0
   - multiprocess=0.70.15=py312h98912ed_1
+  - munkres=1.1.4=pyhd8ed1ab_1
   - mypy_extensions=1.1.0=pyha770c72_0
   - ncurses=6.5=h2d0b736_3
   - networkx=3.5=pyhe01879c_0
   - nlohmann_json=3.12.0=h54a6638_1
   - nomkl=1.0=h5ca1d4c_0
-  - numpy=2.3.3=py312h33ff503_0
   - oauthlib=3.3.1=pyhd8ed1ab_0
   - onnxruntime=1.22.0=py312h2a9cbd2_0_cpu
   - openjpeg=2.5.4=h55fea9a_0
+  - openldap=2.6.10=he970967_0
   - openssl=3.5.4=h26f9b46_0
   - opentelemetry-api=1.37.0=pyhd8ed1ab_0
   - opentelemetry-exporter-otlp-proto-common=1.37.0=pyhd8ed1ab_0
@@ -206,8 +248,10 @@ dependencies:
   - overrides=7.7.0=pyhd8ed1ab_1
   - packaging=24.2=pyhd8ed1ab_2
   - pandas=2.3.3=py312hf79963d_1
+  - pcre2=10.46=h1321c63_0
   - pillow=11.3.0=py312h7b42cdd_3
   - pip=25.2=pyh8b19718_0
+  - pixman=0.46.4=h54a6638_1
   - posthog=5.4.0=pyhd8ed1ab_0
   - prometheus-cpp=1.3.0=ha5d0236_0
   - propcache=0.3.1=pyhe1237c8_0
@@ -228,9 +272,11 @@ dependencies:
   - pygments=2.19.2=pyhd8ed1ab_0
   - pyjwt=2.10.1=pyhd8ed1ab_0
   - pyopenssl=25.3.0=pyhd8ed1ab_0
+  - pyparsing=3.2.5=pyhcf101f3_0
   - pypdf=6.1.1=pyhcf101f3_0
   - pypika=0.48.9=pyhd8ed1ab_1
   - pyproject_hooks=1.2.0=pyhd8ed1ab_1
+  - pyside6=6.9.2=py312h5654102_1
   - pysocks=1.7.1=pyha55dd90_7
   - python=3.12.12=hfe2f287_0_cpython
   - python-build=1.3.0=pyhff2d567_0
@@ -243,10 +289,11 @@ dependencies:
   - python-tzdata=2025.2=pyhd8ed1ab_0
   - python-xxhash=3.6.0=py312h0d868a3_0
   - python_abi=3.12=8_cp312
-  - pytorch=2.6.0=cpu_generic_py312_h1c73833_0
   - pytz=2025.2=pyhd8ed1ab_0
   - pyu2f=0.1.5=pyhd8ed1ab_1
   - pyyaml=6.0.3=pyh7db6752_0
+  - qhull=2020.2=h434a139_5
+  - qt6-main=6.9.2=h5bd77bc_1
   - re2=2024.07.02=h9925aae_2
   - readline=8.2=h8c095d6_2
   - referencing=0.37.0=pyhcf101f3_0
@@ -277,6 +324,7 @@ dependencies:
   - tk=8.6.13=noxft_hd72426e_102
   - tokenizers=0.22.1=py312h6be956c_0
   - tomli=2.3.0=pyhcf101f3_0
+  - tornado=6.5.2=py312h4c3975b_1
   - tqdm=4.67.1=pyhd8ed1ab_1
   - transformers=4.57.1=pyhd8ed1ab_0
   - typer=0.19.2=pyhef33e25_0
@@ -288,18 +336,40 @@ dependencies:
   - typing_inspect=0.9.0=pyhd8ed1ab_1
   - typing_utils=0.1.0=pyhd8ed1ab_1
   - tzdata=2025b=h78e105d_0
+  - unicodedata2=16.0.0=py312h4c3975b_1
   - urllib3=2.5.0=pyhd8ed1ab_0
   - uvicorn=0.37.0=pyh31011fe_0
   - uvicorn-standard=0.37.0=h31011fe_0
   - uvloop=0.21.0=py312h66e93f0_1
   - watchfiles=1.1.1=py312h0ccc70a_0
+  - wayland=1.24.0=h3e06ad9_0
   - websocket-client=1.9.0=pyhd8ed1ab_0
   - websockets=15.0.1=py312h5253ce2_2
   - werkzeug=3.1.3=pyhd8ed1ab_1
   - wheel=0.45.1=pyhd8ed1ab_1
   - wrapt=1.17.3=py312h4c3975b_1
+  - xcb-util=0.4.1=h4f16b4b_2
+  - xcb-util-cursor=0.1.5=hb9d3cd8_0
+  - xcb-util-image=0.4.0=hb711507_2
+  - xcb-util-keysyms=0.4.1=hb711507_0
+  - xcb-util-renderutil=0.3.10=hb711507_0
+  - xcb-util-wm=0.4.2=hb711507_0
+  - xkeyboard-config=2.46=hb03c661_0
+  - xorg-libice=1.1.2=hb9d3cd8_0
+  - xorg-libsm=1.2.6=he73a12e_0
+  - xorg-libx11=1.8.12=h4f16b4b_0
   - xorg-libxau=1.0.12=hb9d3cd8_0
+  - xorg-libxcomposite=0.4.6=hb9d3cd8_2
+  - xorg-libxcursor=1.2.3=hb9d3cd8_0
+  - xorg-libxdamage=1.1.6=hb9d3cd8_0
   - xorg-libxdmcp=1.1.5=hb9d3cd8_0
+  - xorg-libxext=1.3.6=hb9d3cd8_0
+  - xorg-libxfixes=6.0.2=hb03c661_0
+  - xorg-libxi=1.8.2=hb9d3cd8_0
+  - xorg-libxrandr=1.5.4=hb9d3cd8_0
+  - xorg-libxrender=0.9.12=hb9d3cd8_0
+  - xorg-libxtst=1.2.5=hb9d3cd8_3
+  - xorg-libxxf86vm=1.1.6=hb9d3cd8_0
   - xxhash=0.8.3=hb47aa4a_0
   - yaml=0.2.5=h280c20c_3
   - yarl=1.20.1=pyhe1237c8_0
@@ -307,4 +377,38 @@ dependencies:
   - zlib=1.3.1=hb9d3cd8_2
   - zstandard=0.23.0=py312h4c3975b_3
   - zstd=1.5.7=hb8e6e7a_2
+  - pip:
+      - anyascii==0.3.3
+      - defusedxml==0.7.1
+      - doctr==1.9.0
+      - h5py==3.15.1
+      - langdetect==1.0.9
+      - ml-dtypes==0.5.3
+      - numpy==2.2.6
+      - nvidia-cublas-cu12==12.8.4.1
+      - nvidia-cuda-cupti-cu12==12.8.90
+      - nvidia-cuda-nvrtc-cu12==12.8.93
+      - nvidia-cuda-runtime-cu12==12.8.90
+      - nvidia-cudnn-cu12==9.10.2.21
+      - nvidia-cufft-cu12==11.3.3.83
+      - nvidia-cufile-cu12==1.13.1.3
+      - nvidia-curand-cu12==10.3.9.90
+      - nvidia-cusolver-cu12==11.7.3.90
+      - nvidia-cusparse-cu12==12.5.8.93
+      - nvidia-cusparselt-cu12==0.7.1
+      - nvidia-nccl-cu12==2.27.5
+      - nvidia-nvjitlink-cu12==12.8.93
+      - nvidia-nvshmem-cu12==3.3.20
+      - nvidia-nvtx-cu12==12.8.90
+      - onnx==1.19.1
+      - opencv-python==4.12.0.88
+      - pyclipper==1.3.0.post6
+      - pypdfium2==4.30.0
+      - python-doctr==1.0.0
+      - rapidfuzz==3.14.1
+      - shapely==2.1.2
+      - torch==2.9.0
+      - torchvision==0.24.0
+      - triton==3.5.0
+      - validators==0.35.0
 prefix: /home/garyc/anaconda3/envs/rag_api
